--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,22 +1,21 @@
 * {
     border: none;
-    border-radius: 0;
-    /* font-family: "Cica", */
-    /* font-size: 18px; */
-    /*font-weight: bold;*/
+    border-radius: 4px;
+    font-family: "HackGen Console NF";
+    font-size: 18px;
     min-height: 0;
 }
 
 window#waybar {
-    background: #000000;
-    /*border-bottom: 3px solid rgba(100, 114, 125, 0.5);*/
+    background-color: rgba(50, 50, 50, 0.9);
+    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
     color: #e5e9f0;
+    border-radius: 0;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button {
-    padding: 0 5px;
-    background: transparent;
+    padding: 0 0.4em;
+    background-color: transparent;
     color: #ffffff;
     border-bottom: 3px solid transparent;
 }
@@ -37,23 +36,9 @@ window#waybar {
 
 #clock, #battery, #cpu, #memory, #temperature, #backlight, #network, #pulseaudio, #custom-media, #tray, #mode, #idle_inhibitor {
     padding: 0 10px;
-    margin: 0 5px;
-}
-
-#clock {
-    /*background-color: #64727D;*/
-    color: #e5e9f0;
-    font-weight: bold;
-}
-
-#battery {
-    /*background-color: #000000;*/
-    color: #e5e9f0;
-}
-
-#battery.charging {
-    /*background-color: #000000;*/
-    color: #e5e9f0;
+    margin: 6px 3px;
+    color: #333333;
+    background-color: #bbccdd;
 }
 
 @keyframes blink {
@@ -64,7 +49,7 @@ window#waybar {
 }
 
 #battery.critical:not(.charging) {
-    background: #f53c3c;
+    background-color: #f53c3c;
     color: #ffffff;
     animation-name: blink;
     animation-duration: 0.5s;
@@ -73,39 +58,14 @@ window#waybar {
     animation-direction: alternate;
 }
 
-#cpu {
-    /*background: #2ecc71;*/
-    color: #e5e9f0;
-}
-
-#memory {
-    /*background: #9b59b6;*/
-    color: #e5e9f0;
-}
-
-#backlight {
-    /*background: #90b1b1;*/
-    color: #e5e9f0;
-}
-
-#network {
-    /*background: #2980b9;*/
-    color: #e5e9f0;
-}
-
 #network.disconnected {
-    /*background: #f53c3c;*/
-    color: #e5e9f0;
-}
-
-#pulseaudio {
-    /*background: #000000;*/
-    color: #e5e9f0;
+    background-color: #f53c3c;
+    color: #000000;
 }
 
 #pulseaudio.muted {
-    /*background: #000000;*/
-    color: #e5e9f0;
+    background-color: #f53c3c;
+    color: #000000;
 }
 
 #custom-media {
